--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -1,1 +1,7 @@
+@import  'fonts.less';
 @import "_bootstrap";
+@import (less) '../../bower_components/fontawesome/css/font-awesome.min.css';
+@import (less) '../../bower_components/WOW/css/libs/animate.css';
+@import (less) '../../bower_components/hover/css/hover.css';
+
+@import "_global";
