--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4529,6 +4529,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-right: 0;
   }
 }
+@media (min-width: 768px) and (max-width: 767px) {
+  .navbar-right {
+    float: none !important;
+  }
+}
 .navbar-default {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
@@ -19225,6 +19230,13 @@ a:hover {
 .products .products-info p:first-of-type {
   padding-top: 50px;
 }
+.products .products-info .img-wrapper {
+  width: 100%;
+}
+.products .products-info .img-wrapper img {
+  display: block;
+  margin: 0 auto;
+}
 .products .products-title {
   margin-top: 25px;
 }
@@ -19232,8 +19244,18 @@ a:hover {
   color: #045f6b;
   text-align: center;
 }
+@media (max-width: 767px) {
+  .products .products-title h2 {
+    margin-bottom: 25px;
+  }
+}
 .products .products-grid {
-  margin-top: 50px;
+  margin-top: 0;
+}
+@media (min-width: 768px) {
+  .products .products-grid {
+    margin-top: 50px;
+  }
 }
 .products .products-grid:first-of-type {
   margin-top: 25px;
@@ -19241,6 +19263,11 @@ a:hover {
 .products .products-grid .products-grid--single {
   display: table;
   padding: 40px 25px;
+}
+@media (max-width: 767px) {
+  .products .products-grid .products-grid--single:nth-of-type(odd) {
+    margin-bottom: 25px;
+  }
 }
 .products .products-grid .products-grid--single p {
   display: table-cell;
@@ -19257,6 +19284,11 @@ a:hover {
 .marcas {
   position: relative;
   z-index: 2;
+}
+@media (max-width: 767px) {
+  .marcas {
+    padding-top: 25px;
+  }
 }
 .marcas .marcas-title {
   padding-top: 0;
@@ -19278,6 +19310,11 @@ a:hover {
 .marcas .marcas-single .img-wrapper img {
   display: block;
   margin: 0 auto;
+}
+@media (max-width: 767px) {
+  .marcas .marcas-single .img-wrapper img {
+    margin-top: 25px;
+  }
 }
 .btn-outline {
   border: 1px solid #045f6b;
@@ -19326,6 +19363,11 @@ a:hover {
 .categories .categories-single {
   margin-bottom: 50px;
 }
+@media (max-width: 767px) {
+  .categories .categories-single {
+    margin-bottom: 25px;
+  }
+}
 .categories .categories-single h3 {
   color: grey;
   margin-bottom: 25px;
@@ -19341,8 +19383,18 @@ a:hover {
 .categories .categories-single .media {
   margin-bottom: 25px;
 }
+@media (max-width: 767px) {
+  .categories .categories-single .media {
+    margin-bottom: 15px;
+  }
+}
 .categories .categories-single .media-body p {
   padding-top: 10px;
+}
+@media (max-width: 767px) {
+  .categories .categories-single .media-body p {
+    padding-top: 25px;
+  }
 }
 .categories .categories-single .img-wrapper {
   width: 100%;
@@ -19350,6 +19402,11 @@ a:hover {
 .categories .categories-single .img-wrapper img {
   display: block;
   margin: 0 auto;
+}
+@media (max-width: 767px) {
+  .categories .categories-single .img-wrapper img {
+    margin-top: 25px;
+  }
 }
 .contact {
   position: relative;
@@ -19363,6 +19420,13 @@ a:hover {
 @media (min-width: 768px) {
   .contact .contact-form {
     border-left: 1px solid white;
+  }
+}
+@media (max-width: 767px) {
+  .contact .contact-form {
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top: 25px;
   }
 }
 .contact .contact-form .form-control {
@@ -19417,6 +19481,11 @@ a:hover {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+@media (max-width: 767px) {
+  .pull-right {
+    float: none !important;
+  }
+}
 .navbar-toggle {
   margin-top: 18px;
 }
@@ -19435,7 +19504,7 @@ a:hover {
 @media (max-width: 767px) {
   #main-menu .navbar-collapse {
     border: none;
-    margin-top: 10px;
+    margin-top: 40px;
     background-color: #3c3c3b;
   }
 }
@@ -19447,8 +19516,15 @@ a:hover {
   color: #09b3cb;
   text-decoration: none;
 }
-#main-menu li.general:hover {
-  background: url('../img/underline.png') no-repeat bottom center;
+@media (max-width: 767px) {
+  #main-menu li.general a {
+    color: #f5f4f4;
+  }
+}
+@media (min-width: 768px) {
+  #main-menu li.general:hover {
+    background: url('../img/underline.png') no-repeat bottom center;
+  }
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
