--- a/resources/assets/less/_global.less
+++ b/resources/assets/less/_global.less
@@ -155,6 +155,15 @@ a{
 				padding-top: 50px;
 			}
 		}
+
+		.img-wrapper{
+			width: 100%;
+
+			img{
+				display: block;
+				margin: 0 auto;
+			}
+		}
 	}
 
 	.products-title{
@@ -163,11 +172,19 @@ a{
 		h2{
 			color: @blueFour;
 			text-align: center;
+			
+			@media (max-width: @screen-xs-max) {
+				margin-bottom: 25px;
+			}
 		}
 	}
 
 	.products-grid{
-		margin-top: 50px;
+		margin-top: 0;
+
+		@media (min-width: @screen-sm-min) {
+			margin-top: 50px;
+		}
 
 		&:first-of-type{
 			margin-top: 25px;
@@ -176,6 +193,13 @@ a{
 		.products-grid--single{
 			display: table;
 			padding: 40px 25px;
+			
+			@media (max-width: @screen-xs-max) {
+				&:nth-of-type(odd){
+					margin-bottom: 25px;
+				}
+			}
+			
 			
 			p{
 				display: table-cell;
@@ -197,6 +221,10 @@ a{
 .marcas{
 	position: relative;
 	z-index: 2;
+
+	@media (max-width: @screen-xs-max) {
+		padding-top: 25px;
+	}
 
 	.marcas-title{
 		padding-top: 0;
@@ -220,6 +248,10 @@ a{
 			img{
 				display: block;
 				margin: 0 auto;
+
+				@media (max-width: @screen-xs-max) {
+					margin-top: 25px;
+				}
 			}
 		}
 	}
@@ -274,6 +306,9 @@ a{
 
 	.categories-single{
 		margin-bottom: 50px;
+		@media (max-width: @screen-xs-max) {
+			margin-bottom: 25px;
+		}
 
 		h3{
 			color: grey;
@@ -290,11 +325,19 @@ a{
 
 		.media{
 			margin-bottom: 25px;
+
+			@media (max-width: @screen-xs-max) {
+				margin-bottom: 15px;
+			}
 		}
 
 		.media-body{
 			p{
 				padding-top: 10px;
+				
+				@media (max-width: @screen-xs-max) {
+					padding-top: 25px;
+				}
 			}
 		}
 
@@ -304,6 +347,10 @@ a{
 			img{
 				display: block;
 				margin: 0 auto;
+
+				@media (max-width: @screen-xs-max) {
+					margin-top: 25px;
+				}
 			}
 		}
 	}
@@ -321,6 +368,12 @@ a{
 
 		padding-top: 25px;
 		padding-bottom: 25px;
+
+		@media (max-width: @screen-xs-max) {
+			margin-left: -15px;
+    		margin-right: -15px;
+    		margin-top: 25px;
+		}
 
 		.form-control{
 			border-radius: 0;
@@ -368,5 +421,11 @@ a{
 	.footer-logo{
 		padding-top: 20px;
 		padding-bottom: 20px; 
+	}
+}
+
+.pull-right{
+	@media (max-width: @screen-xs-max) {
+		float: none !important;
 	}
 }
