--- a/resources/assets/less/_global.less
+++ b/resources/assets/less/_global.less
@@ -164,6 +164,10 @@ a{
 				margin: 0 auto;
 			}
 		}
+
+		i{
+			margin-left: 25px;
+		}
 	}
 
 	.products-title{
@@ -224,6 +228,10 @@ a{
 
 	@media (max-width: @screen-xs-max) {
 		padding-top: 25px;
+	}
+
+	@media (min-width: @screen-lg-min) {
+		height: 700px;
 	}
 
 	.marcas-title{
