--- a/resources/assets/less/_global.less
+++ b/resources/assets/less/_global.less
@@ -276,7 +276,8 @@ a{
 	padding: 10px;
 	background: none;
 	transition: .3s;
-	margin-top: 25px; 
+	margin-top: 25px;
+	white-space: normal; 
 
 	&:hover{
 		background: @blueFour; 
